# habitpool

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  README.md
.github/: .markdownlint.jsonc  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 769d8fceba1d_initial_schema.py
backend/app/: config.py  database.py  main.py  models.py  rewards.py
backend/tests/: test_rewards.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
