[project]
name = "habitpool-backend"
version = "0.1.0"
description = "HabitPool API — habits unlock your fun money"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "alembic>=1.13",
    "tzdata",  # IANA zone data for zoneinfo on Windows (no-op where the OS provides it)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "ruff>=0.5",
    # Pinned exact: pyright releases weekly and new versions add new errors;
    # upgrades should be deliberate, not a surprise CI break.
    "pyright==1.1.411",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 96
target-version = "py312"

[tool.ruff.lint]
# DTZ and ASYNC enforce repo invariants (local-date math in APP_TIMEZONE; no
# blocking calls in async paths); the rest are low-noise quality sets.
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF", "PT", "DTZ", "ASYNC"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]

[tool.ruff.lint.per-file-ignores]
# Alembic autogenerates these; don't fight the generator's formatting.
"alembic/versions/*" = ["E501", "I001"]

[tool.pyright]
include = ["app", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
